Fix(sidenav): translate3d was giving issues on IE

--- a/src/components/sidenav/sidenav.scss
+++ b/src/components/sidenav/sidenav.scss
@@ -84,12 +84,12 @@ md-sidenav {
 }
 
 .md-sidenav-right {
-  left: 100%;
-  top: 0;
-  transform: translate3d(-100%, 0, 0);
+  left: inherit;
+  right: 0;
+  transform: translate3d(0,0,0);
   &.md-closed {
-    transform: translate3d(0%, 0, 0);
-  }
+    transform: translate3d(100%,0,0);
+  } 
 }
 
 @media screen and (min-width: $layout-breakpoint-xs) {
